# ai-pdf-workspace

./: .dockerignore  .gitattributes  .gitignore  package.json  pnpm-lock.yaml
apps/: README.md
apps/api/: README.md  alembic.ini  pyproject.toml  requirements.deploy.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: a8c9d0e1f2a3_add_lexical_retrieval_index.py  b139cbaa9e15_baseline_users_workspaces_memberships.py  (+12 more)
apps/api/scripts/: analyze_user_task_results.py  compare_retrieval_strategies.py  evaluate_production_retrieval.py  evaluate_retrieval.py  m403a_capacity_acceptance.py  provider_health_stub.py  validate_multimodal_execution.py  validate_multimodal_quality.py
apps/api/tests/: test_asset_image_stream.py  test_asset_migration.py  test_asset_router.py  test_auth_router.py  test_chat_router.py  test_chat_service.py  test_dense_ann_retrieval.py  test_deploy_dependencies.py  test_document_router.py  test_embedding_current_scope.py  test_health.py  test_image_evidence_lifecycle.py  test_image_ingestion.py  test_m403a_capacity_acceptance.py  test_modality_registry.py  test_multimodal_execution.py  test_multimodal_quality.py  test_multimodal_retrieval.py  test_notes_router.py  test_providers.py  test_retrieval_eval.py  test_storage_metrics.py  test_user_task_validation.py  test_workspace_router.py
apps/worker/: README.md  pyproject.toml  requirements.deploy.txt
apps/worker/scripts/: m402_acceptance.py  m403_restore_acceptance.py
apps/worker/tests/: test_image.py  test_image_ingestion.py  test_m402_acceptance.py  test_m403_restore_acceptance.py  test_main.py  test_multimodal_golden_execution.py  test_ocr.py  test_pdf.py  test_pdf_ingestion.py
(+396 files in other folders)
