[project]
name = "ai-pdf-api"
version = "0.1.0"
description = "FastAPI backend for AI PDF Workspace"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic-settings>=2.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pdf_api"]
