[project]
name = "ai-pdf-api"
version = "0.1.0"
description = "FastAPI backend for AI PDF Workspace"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "sqlalchemy>=2.0.41",
  "psycopg[binary]>=3.2.9",
  "pwdlib[argon2]>=0.3.0",
  "email-validator>=2.2.0",
  "alembic>=1.18.5",
  "minio>=7.2.20",
  "pypdf>=5.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pdf_api"]
