[project]
name = "ai-pdf-worker"
version = "0.1.0"
description = "Background worker for AI PDF Workspace"
requires-python = ">=3.12"
dependencies = [
  "ai-pdf-api",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0",
  "pymupdf>=1.28.0",
  "rapidocr-onnxruntime>=1.4.4",
]

[tool.uv.sources]
ai-pdf-api = { path = "../api", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pdf_worker"]
